syntax = "proto3";

package info_age.bremote;

import "google/protobuf/empty.proto";
import "types.proto";

option go_package="api";
//option php_namespace="mediaserver";
option java_package = "net.info-age.bremote.controller";

service ControllerService {
    rpc Ping( String ) returns ( String ) {};
    rpc NewClient( String ) returns ( google.protobuf.Empty ) {};
    rpc RemoveClient( String ) returns ( google.protobuf.Empty ) {};
}
